--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,85 +1,83 @@
-
-
-footer{
-  background: black;
-  padding: 2rem;
-  text-align: center;
-  font-size: 2rem;
-  margin-top: 3rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 2rem;
+footer {
+	background: black;
+	padding: 2rem;
+	text-align: center;
+	font-size: 2rem;
+	margin-top: 3rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 2rem;
 }
 
-
-
-
-.footer__logo{
-  font-size: 2rem;
-  width: 10rem;
-  margin-left: 9rem;
-  color: white;
-  
+.footer__logo {
+	font-size: 2rem;
+	width: 10rem;
+	margin-left: 9rem;
+	color: white;
 }
-.footer__logo img{
-  width: 7rem;
+.footer__logo img {
+	width: 7rem;
 }
 
-
-.footer__socials{
-  display: flex;
-  justify-content: start;
-  gap: 1rem;
-  place-items: center;
-  padding-left: 3rem;
-  /* border: 1px solid red; */
-  margin-left: 4rem;
-
-  
+.footer__socials {
+	display: flex;
+	justify-content: start;
+	gap: 1rem;
+	place-items: center;
+	padding-left: 3rem;
+	/* border: 1px solid red; */
+	/* margin-left: 4rem; */
 }
-.footer__socials a{
-  width: 3.5rem;
-  height: 3.5rem;
-  border: 1px solid #AF812D;
-  border-radius: 50%;
-  color:  #AF812D;
-  padding: 0.8rem;
-  
-  
+.footer__socials a {
+	width: 3.5rem;
+	height: 3.5rem;
+	border: 1px solid #af812d;
+	border-radius: 50%;
+	color: #af812d;
+	padding: 0.8rem;
 }
-.footer__socials a:hover{
-  color:  #0496FF;
-  border: 1px solid  #0496FF;
+.footer__socials a:hover {
+	color: #0496ff;
+	border: 1px solid #0496ff;
 }
 
-
-.footer__copyright{
-  /* margin-bottom: 1rem; */
-  color:  #AF812D;
-} 
-.footer__copyright small{
-  font-size: 0.8rem;
-  text-align: center;
-
+.footer__copyright {
+	/* margin-bottom: 1rem; */
+	color: #af812d;
+}
+.footer__copyright small {
+	font-size: 0.8rem;
+	text-align: center;
 }
 
-@media screen and (max-width: 1024px){
-.footer__socials{
-margin-left: -2rem;
-
+/* @media screen and (max-width: 1024px) {
+	.footer__socials {
+		/* margin-left: -2rem; 
+		border: 2px solid white;
+	}
+	.footer__logo {
+		margin-left: 7rem;
+	}
+} */
+@media screen and (max-width: 540px) {
+	footer {
+		display: flex;
+		flex-direction: column;
+		gap: 3rem;
+	}
+	.footer__logo {
+		margin-left: 5rem;
+	}
+  .footer__socials{
+    width: 100%;
+  }
+  .footer__socials a{
+    width: 30px;
+    height: 30px;
+  }
+  .footer-icon{
+    font-size: 24px;
+    text-align: center;
+    margin: auto;
+  }
 }
-.footer__logo{
-  margin-left: 7rem;
-}
-}
-@media screen and (max-width: 400px){
-footer{
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-.footer__logo{
-  margin-left: 5rem;
-}
-}
-
