--- a/src/components/Headerimage/Headerimg.css
+++ b/src/components/Headerimage/Headerimg.css
@@ -17,10 +17,11 @@
 
 @media screen and (max-width: 540px) {
 	.img__header {
-		margin-top: 3rem;
+		padding: 0;
+		margin-top: 32px;
 	}
 	.first__img img {
-		width: 500px;
+		width: 750px;
 		height: auto;
 	}
 }
