--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -51,7 +51,8 @@ nav {
 @media screen and (max-width: 540px) {
 	nav {
 		width: 100%;
-		padding: 1rem;
+		padding: 20px;
+		height: 96px;
 	}
 	.nav__toggle-btn {
 		display: inline-block;
