--- a/src/components/Section5/Section5.css
+++ b/src/components/Section5/Section5.css
@@ -1,93 +1,98 @@
-.main__head-section5{
-  height: 100%;
-  margin-top: 8rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.main__head-section5 {
+	height: 100%;
+	margin-top: 8rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-.heading-writeup1{
-  margin-top: 2rem;
-  text-align: center;
-  width: 50%;
-}
-
-.heading-writeup1 h3{
-  font-size: 40px;
-  font-weight: bold;
+.heading-writeup1 {
+	margin-top: 2rem;
+	text-align: center;
+	width: 50%;
 }
 
-.heading-writeup1 span{
-  color:rgb(4,150,255);
-}
-.heading-writeup2{
-  display: flex;
-  justify-content: center;
-}
-.heading-writeup2 p{
-  font-weight: light;
-  line-height: 1.5;
-  text-align: center;
-  width: 500px;
-}
-.heading-writeup2 p a{
-  color:rgb(4,150,255);
-  cursor: pointer;
-}
-.contact-container{
-  width: 40%;
-  margin-top: 4rem;
-}
-form{
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-  width: 100%;
-  height: 100%;
+.heading-writeup1 h3 {
+	font-size: 40px;
+	font-weight: bold;
 }
 
-input, textarea{
-  width: 100%;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  background: white;
-  border: 2px solid white;
-  resize: none;
-  color: black;
+.heading-writeup1 span {
+	color: rgb(4, 150, 255);
+}
+.heading-writeup2 {
+	display: flex;
+	justify-content: center;
+}
+.heading-writeup2 p {
+	font-weight: light;
+	line-height: 1.5;
+	text-align: center;
+	width: 500px;
+}
+.heading-writeup2 p a {
+	color: rgb(4, 150, 255);
+	cursor: pointer;
+}
+.contact-container {
+	width: 40%;
+	margin-top: 4rem;
+}
+form {
+	display: flex;
+	flex-direction: column;
+	gap: 1.2rem;
+	width: 100%;
+	height: 100%;
 }
 
-.button{
-  padding: 10px;
-  color: white;
-  background: rgb(4,150,255);
-  border-radius: 5px;
-  cursor: pointer;
+input,
+textarea {
+	width: 100%;
+	padding: 1.5rem;
+	border-radius: 0.5rem;
+	background: white;
+	border: 2px solid white;
+	resize: none;
+	color: black;
 }
 
-
-@media screen and (max-width: 540px){
-  .main__head-section5{
-  margin-top: 7rem;
-}
-.heading-writeup1{
-  width: 100%;
-  padding: 2px;
+.button {
+	padding: 10px;
+	color: white;
+	background: rgb(4, 150, 255);
+	border-radius: 5px;
+	cursor: pointer;
 }
 
-.heading-writeup1 h3{
-  font-size: 30px; 
-}
-.contact-container{
-  width: 80%;
-  margin-top: 4rem;
-}
+@media screen and (max-width: 540px) {
+	.main__head-section5 {
+		margin-top: 7rem;
+		margin-top: 80px;
+	}
+	.heading-writeup1 {
+		width: 100%;
+		padding: 10px;
+		margin-top: 0rem;
+	}
 
-.heading-writeup2 p{
-  font-size: 12px;
-  width: 79%;
-}
-.heading-writeup2{
-  margin-top: 1rem;
-}
+	.heading-writeup1 h3 {
+		font-size: 30px;
+	}
+	.contact-container {
+		width: 80%;
+		margin-top: 4rem;
+	}
 
+	.heading-writeup2 p {
+		font-size: 12px;
+		width: 79%;
+	}
+	.heading-writeup2 {
+		margin-top: 1rem;
+	}
+	form {
+		gap: 24px;
+		margin-top: 55px;
+	}
 }
